# bazel-buf-demo

./: BUILD  README.md  WORKSPACE  deps.bzl  go.mod  go.sum
src/protos/greetapis/greet/v1/: BUILD.bazel  greet.proto
src/protos/greetapis/src/services/greetsvc/: BUILD.bazel  main.go
src/services/greetsvc/: BUILD.bazel  main.go
