load("@rules_proto//proto:defs.bzl", "proto_library")
load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")
load("@rules_buf//buf:defs.bzl", "buf_lint_test")

proto_library(
    name = "greetv1_proto",
    srcs = ["greet.proto"],
    strip_import_prefix = "/src/protos/greetapis",
    visibility = ["//visibility:public"],
)

go_proto_library(
    name = "greetv1_go_proto",
    compilers = ["@io_bazel_rules_go//proto:go_grpc"],
    importpath = "github.com/arianics/bazel-buf-demo/src/protos/greetapis/greet/v1",
    proto = ":greetv1_proto",
    visibility = ["//visibility:public"],
)

go_library(
    name = "greet",
    embed = [":greetv1_go_proto"],
    importpath = "github.com/arianics/bazel-buf-demo/src/protos/greetapis/greet/v1",
    visibility = ["//visibility:public"],
)

buf_lint_test(
    name = "greetv1_proto_lint",
    config = "//src/protos/greetapis:buf.yaml",
    targets = [":greetv1_proto"],
)
