load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "greetsvc_lib",
    srcs = ["main.go"],
    importpath = "github.com/arianics/bazel-buf-demo/src/protos/greetapis/src/services/greetsvc",
    visibility = ["//visibility:private"],
    deps = ["//src/protos/greetapis/greet/v1:greet"],
)

go_binary(
    name = "greetsvc",
    embed = [":greetsvc_lib"],
    visibility = ["//visibility:public"],
)
